force-app/main/default/objects/RentalCarEnrgyUse/RentalCarEnrgyUse.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>