force-app/main/default/objects/RentalCarEnrgyUse/fields/Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_KM__c</fullName>
    <description>AJ: Created this field as part of NZC Phase 2 Implementation to convert the distance in KM if entered in Miles.</description>
    <formula>IF(ISPICKVAL(DistanceUnit , &apos;Kilometers&apos;), Distance , (Distance*1.609344))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>