force-app/main/default/objects/RentalCarEnrgyUse/fields/Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation, This field is created to capture whether the Fuel Type is Hybrid or not:</description>
    <inlineHelpText>If this is checked and fuel type is Electricity, then the Fuel Type is Consider as Hybrid.</inlineHelpText>
    <label>Hybrid</label>
    <type>Checkbox</type>
</CustomField>