force-app/main/default/objects/RentalCarEnrgyUse/fields/NZC_RC_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>NZC_RC_Auto_Number__c</fullName>
    <description>HA: NZC auto number field which will be copied to external id field</description>
    <displayFormat>RC-{00000}</displayFormat>
    <label>NZC RC Auto Number</label>
    <type>AutoNumber</type>
</CustomField>