force-app/main/default/objects/RentalCarEnrgyUse/fields/Procurement_Emissions_Factor_Set_WTT__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Emissions_Factor_Set_WTT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ: Created for NZC Implementation, This field is created to capture Procurement Emission Factor Set for WTT:</description>
    <label>Procurement Emissions Factor Set WTT</label>
    <referenceTo>PcmtEmssnFctrSet</referenceTo>
    <relationshipLabel>Rental Car Energy Use</relationshipLabel>
    <relationshipName>Rental_Car_Energy_Use</relationshipName>
    <type>Lookup</type>
</CustomField>