force-app/main/default/objects/RentalCarEnrgyUse/fields/Rental_Car_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Rental_Car_External_ID__c</fullName>
    <description>RRD: Created for NZC Implementation PhII_UC007_US02, Purpose: This Field is used to store the External id</description>
    <externalId>true</externalId>
    <label>Rental Car  External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>