force-app/main/default/objects/RentalCarEnrgyUse/fields/Scope_3_Emission_Source__c.field-meta.xml
<CustomField>
    <fullName>Scope_3_Emission_Source__c</fullName>
    <description>AJ:Created for the NZC Implementation
Purpose: To show the auto populated value of Scope 3 Emission Source.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Scope3EmssnSrcId  ,  Scope3EmssnSrc.Name , &apos;_self&apos;)</formula>
    <label>Scope 3 Emission Source</label>
    <type>Text</type>
</CustomField>